# course_django

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  fake_data.py  faker_popul.py  manage.py  pyproject.toml  requirement.txt
Tests/: test.py
accounts/: admin.py  models.py  tests.py  urls.py  views.py
chat/: admin.py  apps.py  models.py  permissions.py  serializers.py
chat/management/: activate_employees.py
chat/management/commands/: chat_populate_db.py
chat/migrations/: 0001_initial.py  0002_initial.py
common/: enums.py
company/: admin.py  models.py
company/migrations/: 0001_initial.py
course_django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
djangoHomework/: asgi.py  settings.py  urls.py  wsgi.py
employees/: employee_list.html  models.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py
examples/: apps.py  homework_querysets.py  querysets.py  sample_structure.py  urls.py
general/: admin.py  apps.py  middlewares.py  models.py  schema.py  views.py
general/migrations/: 0001_initial.py  0002_initial.py  0002_remove_requeststatistics_data_and_more.py
hr/: admin.py  api_urls.py  api_views.py  apps.py  calculate_salary.py  constants.py  forms.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  pydantic_models.py  serializers.py  signals.py  tasks.py  tests.py  tests_PViews.py  tests_Views.py  translation.py  urls.py  validators.py  views.py
hr/commands/: __init__.py  popul.py  querysets.py
hr/management_comands/: faker_popul.py  querysets.py  urls.py
hr/migrations/: 0001_initial.py  0002_alter_company_company_logo.py  0002_company.py  0002_company_employee_phone_number_and_more.py  0002_monthlysalary_paid.py  0002_position_is_active.py  0003_alter_company_company_logo.py  0003_company_employee_phone_number.py  0003_company_employee_phone_number_and_more.py  0003_department_company_alter_department_unique_together.py  0004_alter_company_company_logo.py  0004_employee_phone_number_position_job_description.py  0004_monthlysalary_paid.py  0005_monthlysalary_paid_date.py  0005_monthlysalary_paid_date_position_job_description_en_and_more.py  0006_employee_avatar_employee_cv.py  0007_alter_monthlysalary_paid_date.py  0007_company_logo.py  0008_alter_monthlysalary_paid_date.py  0008_remove_monthlysalary_paid_date.py  0009_employee_department.py  0009_position_name.py  0009_salary.py  0010_department_employee_count.py  0010_position_name.py  0010_remove_position_name.py  0011_alter_employee_department.py  0012_remove_department_employee_count_and_more.py  __init__.py
hr/tests/: 0.py  factories.py  test_PViews.py  test_Views.py  test_api.py  test_employees.py  test_employees_api.py  test_salary.py  test_views.py
hr/views/: __init__.py  class_views.py  department.py  employee_edit_view.py  employee_info_views.py  function_views.py  generic_views.py  homework_querysets.py
locale/en/LC_MESSAGES/: django.po
ops/scripts/: start-server.sh
static/css/: style.css  style.scss
staticfiles/css/: style.css  style.css.map  style.scss
templates/: base.html  detail.html  employee_confirm_delete.html  employee_detail.html  employee_deteil_form.html  employee_form.html  employee_list.html  employee_profile.html  employee_result.py  employees.html  home.html  homework_querysets.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  password_reset_form.html  querysets.html  salary_calculator.html  your_templates.html
templates/registration/: login.html
(+12 files in other folders)
